@@ -34,6 +34,9 @@ class Smarty_Internal_Compile_Function extends Smarty_Internal_CompileBase {
         foreach ($_attr as $_key => $_data) {
             $compiler->template->properties['function'][$_name]['parameter'][$_key] = $_data;
         } 
+        if (isset($compiler->template->properties['function'][$_name]['parameter'])) {
+            $compiler->smarty->template_functions[$_name]['parameter'] = $compiler->template->properties['function'][$_name]['parameter'];
+        } 
         if ($compiler->template->caching) {
             $output = '';
         } else {
