@@ -1,3 +1,6 @@
+01/06/2010
+- bugfix on template functions used with template inheritance
+
 31/05/2010
 - bugfix the parser did not allow some smarty variables with special name like $for, $if, $else and others.
 
